# gk21-player-os

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  run.sh
backend/app/: main.py
backend/app/ai/: analysis_service.py  context.py  llm.py  metrics.py  mvp_suggestions.py  progress.py  prompt_builder.py  rule_engine.py  saver.py
backend/app/api/: ai_analysis.py  dashboard.py  day.py  db.py  health.py  mvp_suggestions.py  stats.py
backend/app/core/: config.py
backend/app/crud/: ai_analysis.py  body.py  dashboard.py  day.py  gk.py  meal.py  sleep.py  stats.py  workout.py  workout_item.py
backend/app/data/: philosophy.py
backend/app/schemas/: day.py
backend/app/services/: mission.py  philosophy.py
frontend/app/: ServiceWorkerRegister.tsx  apple-icon.tsx  icon.tsx  layout.tsx  manifest.ts  page.tsx
frontend/app/history/: page.tsx
frontend/app/pwa-icon-192/: route.tsx
frontend/app/pwa-icon-512/: route.tsx
frontend/components/: AICoachCard.tsx  BottomNav.tsx  DashboardAccordion.tsx  GKReadyCard.tsx  Header.tsx  MealCard.tsx  MedicationCard.tsx  MissionCard.tsx  PhilosophyCard.tsx  ScoreCard.tsx  TodayCard.tsx  WorkoutCard.tsx
frontend/public/: sw.js
scripts/: backup_gk21.sh  deploy.sh  gk  setup_backend_env.sh
sql/: create_gk21_schema.sql
sql/migrations/: 2026-07-03_workout_item_mvp_protein_items.sql  2026-07-03b_workout_item_detail.sql  2026-07-04_widen_grade_column.sql  2026-07-04b_add_is_sick.sql  2026-07-04c_mvp_suggestion_cache.sql  2026-07-09_carb_fat_kcal_goals.sql  2026-07-10_drop_mvp_text.sql
(+10 files in other folders)
