[project]
name = "gk21-backend"
version = "0.1.0"
description = "GK21 Backend API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.138.1",
    "openai>=2.44.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[tool.uv]
package = false
